# beeno

./: .gitignore  Cargo.toml  README.md  TODO.md  deny.toml  install.sh
.github/scripts/: sync_version_from_tag.py
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: engine.rs  lib.rs  providers.rs  repl.rs  server.rs  types.rs
docs/: agentic-development.md  architecture.md  dev-mode.md  testing.md
